--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "extends": [
       "react-app",
       "react-app/jest",
+      "plugin:storybook/recommended",
       "plugin:storybook/recommended"
     ]
   },
@@ -54,10 +55,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@storybook/addon-essentials": "7.0.27",
     "@storybook/addon-interactions": "7.0.27",
     "@storybook/addon-links": "7.0.27",
-    "@storybook/addon-styling": "^1.3.4",
     "@storybook/blocks": "7.0.27",
     "@storybook/preset-create-react-app": "7.0.27",
     "@storybook/react": "7.0.27",
