--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -6,7 +6,7 @@ on:
     branches: [main, master]
 jobs:
   test:
-    runs-on: ubuntu latest
+    runs-on: ubuntu-latest
     steps: 
       - name: Get code from repo
         uses: action/checkout@v3
